--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <link rel="stylesheet" href="test.css">
+  <link rel="stylesheet" href="./Frontend/test.css">
   <title>Steam Quackkkk</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, height=device-height">
