--- a/index.html
+++ b/index.html
@@ -69,15 +69,15 @@
       <div class="numerical_slider">
         <label for="review_threshold">Min Review Count</label>
         <div class="slider_container">
-          <input style="width: 75%" type="range" id="review_threshold" name="review_threshold" min="100" max="10000" step="100" value="100" oninput="updateSetting(this)">
-          <span id="review_threshold_value">100</span>
+          <input style="width: 75%" type="range" id="review_threshold" name="review_threshold" min="100" max="10000" step="100" value="2000" oninput="updateSetting(this)">
+          <span id="review_threshold_value">2000</span>
         </div>
       </div>
       <div class="numerical_slider">
         <label for="maximum_price">Max Price</label>
         <div class="slider_container">
           <input style="width: 80%" type="range" id="maximum_price" name="maximum_price" min="0" max="70" step="1" value="70" oninput="updateSetting(this)">
-          <span id="maximum_price_value">$70</span>
+          <span id="maximum_price_value">Any</span>
         </div>
       </div>
       <div class="slider">
@@ -131,7 +131,7 @@
       <div class="slider">
         <label for="recency">Recency</label>
         <div class="slider_container">
-          <input type="range" id="recency" name="recency" min="0" max="1" step="0.01" value="0.5" oninput="updateSetting(this)">
+          <input type="range" id="recency" name="recency" min="0" max="1" step="0.01" value="1.0" oninput="updateSetting(this)">
         </div>
       </div>
     </div>
